INCLUDES = -I/usr/local/include
bin_PROGRAMS = netherearth
netherearth_SOURCES = 3dobject-ase.cpp 3dobject.cpp bitmap.cpp bullet.cpp cmc.cpp construction.cpp enemy_ai.cpp glprintf.cpp main.cpp mainmenu.cpp maps.cpp menu.cpp myglutaux.cpp nether.cpp nethercycle.cpp netherdebug.cpp nethersave.cpp particles.cpp piece3dobject.cpp quaternion.cpp radar.cpp robot_ai.cpp robots.cpp shadow3dobject.cpp vector.cpp
netherearth_LDFLAGS = -L/usr/local/lib
netherearth_LDADD =  -lGL -lGLU -lglut -lSDL -lSDL_mixer -lpthread
EXTRA_DIST = 3dobject-ase.cpp 3dobject.cpp bitmap.cpp bullet.cpp cmc.cpp construction.cpp enemy_ai.cpp glprintf.cpp main.cpp mainmenu.cpp maps.cpp menu.cpp myglutaux.cpp nether.cpp nethercycle.cpp netherdebug.cpp nethersave.cpp particles.cpp piece3dobject.cpp quaternion.cpp radar.cpp robot_ai.cpp robots.cpp shadow3dobject.cpp vector.cpp 3dobject.h bitmap.h cmc.h glprintf.h list.h myglutaux.h nether.h piece3dobject.h quaternion.h shadow3dobject.h vector.h netherearth.motor netherearth.spec
AUTOMAKE_OPTIONS = foreign
